# budgie-pixel-saver-applet

./: README.md  install.sh  meson.build  meson_post_install.sh
src/: BudgiePixelSaverApplet.plugin.in  BudgiePixelSaverApplet.vala  TitleBarManager.vala  meson.build  net.milgar.budgie-pixel-saver.gschema.xml  plugin.gresource.xml  settings.ui
